# aplications_api

./: pyproject.toml
aplications_api/: __init__.py  app.py
tests/: __init__.py  conftest.py  test_app.py
